<resources>
    <string name="app_name">ConText Scanner</string>

    <string name="title_activity_document_scanner">ConText Scanner</string>
    <string name="title_activity_gallery">Document Gallery</string>
    <string name="title_activity_full_image">Scanned Image Viewer</string>
    <string name="images_scanned">Images Scanned</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="confirm_title">Confirm</string>
    <string name="confirm_delete_text">Do you want to delete this image?</string>
    <string name="confirm_delete">Do you want to delete this text?</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="confirm_delete_multiple_text">Do you want to delete the selected images?</string>
    <string name="share_snackbar">Share images through</string>
    <string name="scanningToast">Searching for document\nTap again to scan whole image</string>
    <string name="colorMode">Color Mode</string>
    <string name="bwMode"><![CDATA[B&W mode]]></string>
    <string name="autoMode">Automatic Mode</string>
    <string name="manualMode">Manual Mode</string>
    <string name="share_app_using">Share link through</string>
    <string name="settings">Settings</string>
    <string name="basic_settings">Basic Settings</string>
    <string name="automatic_tagging">Automatic Tagging</string>
    <string name="automatic_tagging_summary">Define automatic tags to be applied on marked scans using the special page template</string>
    <string name="match_aspect">Match preview aspect ratio</string>
    <string name="match_aspect_summary">Most devices have the highest resolution picture aspect ratio different from the preview one, this setting will select the highest picture resolution that matches with the aspect ratio of preview</string>
    <string name="bug_rotate">Rotate Image 180º</string>
    <string name="bug_rotate_summary">Some devices have the camera upside down, this setting adjusts everything to make sense</string>
    <string name="usage_stats">Usage Statistics</string>
    <string name="usage_stats_summary">Send various usage statistics to developer. No content data will be sent</string>
    <string name="send_message">Send Message</string>
    <string name="send_message_summary">Send message to developer</string>
    <string name="stats_optin_title">Usage Stats</string>
    <string name="stats_optin_text">Do you want to enable ConText Scanner to send anonymous usage statistics to the developer?\n\nYou can change this anytime on the settings screen.</string>
    <string name="answer_later">Later</string>
    <string name="activateunknown">Go to Settings</string>
    <string name="feedback">Feedback</string>
    <string name="filterModeOn">Image Processor On</string>
    <string name="filterModeOff">Image Processor Off</string>
    <string name="action_tag">Tag</string>
    <string name="action_settings">Settings</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="ocr">OCR</string>
    <string name="bscan">[SCAN</string>
    <string name="bdoc">DOC]</string>
    <string name="click_ocr_to_detect_text">Click OCR To Detect Text:</string>
    <string name="tap_detected_text_on_the_screen_to_capture">Tap detected text on the screen to capture!</string>
    <string name="clear">Clear</string>
    <string name="save_text">Save text</string>
    <string name="standard_tags">Standard Tags:</string>
    <string name="done">Done</string>
    <string name="scan">SCAN</string>
    <string name="docs">DOCS</string>
    <string name="document_scanner">Document\nScanner</string>
    <string name="gallery">Gallery</string>
    <string name="detect_text_blocks">Detect Text Blocks</string>
    <string name="detect_text_lines">Detect Text Lines</string>
    <string name="detect_text_words">Detect Text Words</string>
    <string name="error_dsa">Error starting DocumentScannerActivity!</string>
    <string name="error_oca">Error starting OcrCaptureActivity!</string>
    <string name="error_results">Error receiving OCR results!</string>
    <string name="ocr_capture_screen">OCR Capture</string>
    <string name="no_text_detected">No text detected. Tap on the text bounding box on the screen.</string>
    <string name="snackbar_tap">Tap the textboxes to capture the text. Pinch/Stretch to zoom</string>
    <string name="got_it">Got it</string>
    <string name="error_saving_text">Error saving text!</string>
    <string name="saved_texts_list">Saved Texts</string>
    <string name="currently_there_are_no_saved_ocr_texts">Currently there are no saved OCR texts.</string>
    <string name="summary">Summary</string>
    <string name="description">Description</string>
    <string name="edit_text_detail">Edit Text</string>
    <string name="rename">Rename</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="cancel">Cancel</string>
    <string name="save_file">Save file</string>
    <string name="enter_filename">Enter Filename</string>
    <string name="enter_text">Enter text</string>
    <string name="textfilename">Filename:</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_link">https://github.com/Aniruddha-Tapas/Document-Scanner/blob/master/PrivacyPolicy.md</string>
</resources>
